--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -18,6 +18,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>ca.hec</groupId>
+			<artifactId>hec-grade-viewer-api</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>ca.hec</groupId>
+			<artifactId>hec-grade-viewer-impl</artifactId>
+			<scope>compile</scope>
+		</dependency>
+	
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${kernel.spring.version}</version>
