Simple entity response

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,10 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.sakaiproject.kernel</groupId>
+			<artifactId>sakai-kernel-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
