--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -33,6 +33,11 @@
 			<groupId>org.sakaiproject.kernel</groupId>
 			<artifactId>sakai-kernel-api</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject.edu-services.gradebook</groupId>
+            <artifactId>gradebook-service-api</artifactId>
+        </dependency>
 	
 		<!-- Spring -->
 		<dependency>
