--- a/tool/src/main/webapp/WEB-INF/web.xml
+++ b/tool/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 		
 		<init-param>
 			<param-name>main-page</param-name>
-			<param-value>/index</param-value>
+			<param-value>/index.jsp</param-value>
 		</init-param>
 		
 		<load-on-startup>0</load-on-startup>
@@ -53,6 +53,6 @@
 	
 	<servlet-mapping>
 		<servlet-name>HecGradeViewer</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/svc/*</url-pattern>
 	</servlet-mapping>
 </web-app>
