--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -193,7 +193,7 @@
 						</goals>
 						
 						<configuration>
-							<arguments>tomcat</arguments>
+							<arguments>build</arguments>
 						</configuration>
 					</execution>
 				</executions>
