--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -41,6 +41,17 @@
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- Logging -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
